# rsgpt-multi-agent-wip

./: .gitattributes  .gitignore  README.md  manifest.yaml
rsgpt-ai-core/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.yml  example-test.env  example.env  pyproject.toml  pytest.ini
rsgpt-ai-core/.github/: PULL_REQUEST_TEMPLATE.md
rsgpt-ai-core/.github/workflows/: _deploy.yml  production.yml  pull_request.yml  qa.yml
rsgpt-ai-core/alembic/: README  env.py
rsgpt-ai-core/alembic/versions/: 383380c5c621_add_agent_sessions_tables.py  a1b2c3d4e5f6_add_token_tracking_columns.py
rsgpt-ai-core/app/: __init__.py  auth.py  config.py  dependencies.py  main.py
rsgpt-ai-core/app/api/: main.py
rsgpt-ai-core/app/config/: multi_agent_servers.yaml
rsgpt-ai-core/app/db_models/: __init__.py  base.py  connection.py  sessions.py
rsgpt-ai-core/app/llm/: __init__.py  enums.py  factory.py  service.py
rsgpt-ai-core/app/models/: __init__.py  agent.py  channels.py  chat.py  consts.py  context.py  file_path.py  rerank.py  services.py  system.py
rsgpt-ai-core/app/services/: __init__.py
rsgpt-ai-core/guides/: AGENT_REFACTORING_PLAN.md  AGENT_STREAMING_GUIDE.md  CONTEXT_PRUNING_PLAN.md  CONTEXT_SYSTEM_GUIDE.md  RAG_SYSTEM_GUIDE.md  RSLOG_MCP_INTEGRATION.md
rsgpt-ai-core/tests/: conftest.py  test_config.py  test_main.py
rsgpt-ai-core/tests/api/: test_agent.py  test_chat.py  test_full_pipeline.py  test_main.py  test_service_auth.py
rsgpt-ai-core/tests/llm/: __init__.py  test_factory.py  test_integration.py  test_service.py
rsgpt-ai-core/tests/models/: test_agent.py  test_channels.py
rsgpt-ai-core/tests/multi_agent/: test_enum_tool_args.py  test_model_paths.py  test_orchestrator_review.py  test_peer_guard.py  test_planner.py  test_registry.py  test_tool_filter.py  test_validator.py  test_workflow_timeline.py
rsgpt-ai-core/tests/services/: test_agent_tools.py  test_chat_instructions.py  test_conductor_service.py  test_config_service.py  test_encryption_service.py  test_rag_service.py  test_raw_search.py  test_reranker.py  (+1 more)
rsgpt-be/: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  pytest.ini
rsgpt-be/.github/: pull_request_template.md
rsgpt-be/alembic/: env.py
rsgpt-be/app/: __init__.py  auth.py  config.py  dependencies.py  main.py  scheduler.py
rsgpt-be/tests/: __init__.py  test_auth0_m2m_service.py  test_config.py  test_ssl_connection_fixes.py
(+460 files in other folders)
