[tool.poetry]
name = "rsgpt-backend"
version = "0.4.3"
description = "API Gateway"
authors = ["Rocscience"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.0,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.31.0,<0.36.0"}
alembic = "^1.16.4"
pydantic-settings = "^2.0.0"
psycopg2-binary = "^2.9.9"
authlib = "^1.6.1"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
requests = "^2.31.0"
python-dotenv = "1.0.1"
bs4 = "^0.0.2"
aiohttp = "^3.12.15"
asyncwhois = "^1.1.10"
lxml = "^6.0.0"
auth0-fastapi-api = "^1.0.0b3"
apscheduler = "^3.10.4"
httpx = "^0.28.1"
packaging = "^25.0"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"
mypy = "^1.17.1"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"